--- a/.config/sway/config
+++ b/.config/sway/config
@@ -46,8 +46,8 @@ gaps top 4
 gaps inner 10
 #gaps outer 10
 
-set $opacity 0.8
-for_window [app_id="wofi"] opacity $opacity
+#set $opacity 0.8
+#for_window [app_id="wofi"] opacity $opacity
 
 ### Output configuration
 #
