--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -760,4 +760,6 @@ tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
 default_linemode devicons
-default_linemode devicons
+
+# Map wp to set selected image as the wallpaer for Sway
+map wp shell cp -f %s ~/.cache/wallpaper && swaymsg output "*" background ~/.cache/wallpaper fill
