--- a/.config/sway/config
+++ b/.config/sway/config
@@ -283,6 +283,9 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 
+# Window rules
+for_window [app_id="mpv"] floating enable, resize set width 640 height 360, move position 1200 650, focus;
+
 #
 # Status Bar:
 #
