--- a/.local/share/applications/ytfzf.desktop
+++ b/.local/share/applications/ytfzf.desktop
@@ -2,7 +2,7 @@
 Encoding=UTF-8
 Version=1.0
 Type=Application
-Terminal=true
+Terminal=false
 Exec=kitty --class ytfzf -e ytfzf
 Name=ytfzf
 GenericName=Youtube videos from the terminal
