--- a/.config/sway/config
+++ b/.config/sway/config
@@ -31,7 +31,7 @@ exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec_always ~/.local/bin/clamshell-mode.sh
 
 # Start Dunst
-#exec_always dunst
+exec_always dunst
 
 # At startup focus on workspace 1
 exec swaymsg "workspace 1;"
