Updated newboat icon

--- a/.local/share/applications/newsboat.desktop
+++ b/.local/share/applications/newsboat.desktop
@@ -4,7 +4,7 @@ Terminal=false
 Exec=kitty --class newsboat -e newsboat
 Name=Newsboat
 Comment=Newsboat is an RSS/Atom feed reader for the text console
-Icon=utilities-terminal
+Icon=application-rss+xml-symbolic
 Keywords=News;Browser;Terminal
 MimeType=inode/directory;
 Categories=ConsoleOnly;System
