--- a/.local/share/applications/ranger.desktop
+++ b/.local/share/applications/ranger.desktop
@@ -4,7 +4,7 @@ Terminal=false
 Exec=kitty --class ranger -e ranger
 Name=Ranger
 Comment=Launches the ranger file manager
-Icon=utilities-terminal
+Icon=system-file-manager-symbolic
 Keywords=File;Manager;Browser;Explorer;Launcher;Vi;Vim;Python
 MimeType=inode/directory;
 Categories=ConsoleOnly;System;FileTools;FileManager
