--- a/.local/share/applications/newsboat.desktop
+++ b/.local/share/applications/newsboat.desktop
@@ -3,6 +3,7 @@ Type=Application
 Terminal=false
 Exec=kitty --class newsboat -e newsboat
 Name=Newsboat
+GenericName=RSS/Atom feed reader
 Comment=Newsboat is an RSS/Atom feed reader for the text console
 Icon=application-rss+xml-symbolic
 Keywords=News;Browser;Terminal
