--- a/.local/share/applications/ranger.desktop
+++ b/.local/share/applications/ranger.desktop
@@ -3,6 +3,7 @@ Type=Application
 Terminal=false
 Exec=kitty --class ranger -e ranger
 Name=Ranger
+GenericName=File manager
 Comment=Launches the ranger file manager
 Icon=system-file-manager
 Keywords=File;Manager;Browser;Explorer;Launcher;Vi;Vim;Python
