--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -5,7 +5,7 @@
     // "width": 1280, // Waybar width
     "margin": "10, 10, 0, 10", // Top,Left,Bottom,Right
     // Choose the order of the modules
-    "modules-left": ["sway/workspaces", "sway/mode", "custom/media"],
+    "modules-left": ["sway/workspaces", "sway/mode"],
     "modules-center": ["custom/date-time"],
     "modules-right": ["custom/arch-updates", "custom/scratchpad-indicator", "idle_inhibitor", "pulseaudio", "backlight", "temperature", "custom/network", "battery", "tray"],
     // Modules configuration
