--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -761,7 +761,6 @@ tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
 default_linemode devicons
 
-# Map wp to set selected image as the wallpaper for Sway
-# map wp shell cp -f %s ~/.cache/wallpaper && swaymsg output "*" background ~/.cache/wallpaper fill
+# Map wp to set selected image as the wallpaper for Qtile
 map wp shell cp -f %s ~/.cache/wallpaper && qtile cmd-obj -o cmd -f reload_config
 
