Removed the need for Spotify to run in Cage as a recent fix enabled it to run in Qtile correctly under Wayland

--- a/.local/share/applications/spotify.desktop
+++ b/.local/share/applications/spotify.desktop
@@ -3,7 +3,7 @@ Type=Application
 Name=Spotify
 GenericName=Music Player
 Icon=spotify-client
-Exec=cage spotify
+Exec=spotify
 Terminal=false
 MimeType=x-scheme-handler/spotify;
 Categories=Audio;Music;Player;AudioVideo;
