--- a/.xonshrc
+++ b/.xonshrc
@@ -11,8 +11,8 @@ aliases['vim'] = ['nvim']
 aliases['config'] = ['/usr/bin/git', '--git-dir=$HOME/.cfg/', '--work-tree=$HOME']
 aliases['wanip'] = ['dig', '+short', 'myip.opendns.com', '@resolver1.opendns.com']
 
-if shutil.which('btop'):
-	aliases['top'] = ['btop']
+if shutil.which('bpytop'):
+	aliases['top'] = ['bpytop']
 
 if ($TERM.__contains__('xterm')):
     aliases['ssh'] = ['kitty', '+kitten', 'ssh']
